src/objects/Management_Site__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Management Sites</relationshipLabel>
        <relationshipName>Management_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Gateway__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Default Gateway</label>
        <referenceTo>Management_IP__c</referenceTo>
        <relationshipLabel>Management Sites</relationshipLabel>
        <relationshipName>Management_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>IF(Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__c != null, Hostname__c  &amp; &quot;.&quot; &amp; Parent_Site__r.Hostname__c &amp; &quot;.&quot; &amp; Parent_Site__r.Parent_Site__r.Hostname__c &amp; &quot;.&quot; &amp; Parent_Site__r.Parent_Site__r.Parent_Site__r.Hostname__c &amp; &quot;.&quot; &amp; Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Hostname__c &amp; &quot;.&quot; &amp; Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Hostname__c,
IF(Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__c != null, Hostname__c  &amp; &quot;.&quot; &amp; Parent_Site__r.Hostname__c &amp; &quot;.&quot; &amp; Parent_Site__r.Parent_Site__r.Hostname__c &amp; &quot;.&quot; &amp; Parent_Site__r.Parent_Site__r.Parent_Site__r.Hostname__c &amp; &quot;.&quot; &amp; Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Hostname__c,
IF(Parent_Site__r.Parent_Site__r.Parent_Site__c != null, Hostname__c  &amp; &quot;.&quot; &amp; Parent_Site__r.Hostname__c &amp; &quot;.&quot; &amp; Parent_Site__r.Parent_Site__r.Hostname__c &amp; &quot;.&quot; &amp; Parent_Site__r.Parent_Site__r.Parent_Site__r.Hostname__c,
IF(Parent_Site__r.Parent_Site__c != null, Hostname__c &amp; &quot;.&quot; &amp; Parent_Site__r.Hostname__c &amp; &quot;.&quot; &amp; Parent_Site__r.Parent_Site__r.Hostname__c,
IF(Parent_Site__c != null, Hostname__c &amp; &quot;.&quot; &amp; Parent_Site__r.Hostname__c, Hostname__c)))))</formula>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Elevation__c</fullName>
        <label>Elevation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hostname__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Hostname</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <label>Limit</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PPPoE_VLAN__c</fullName>
        <inlineHelpText>The PPPoE Per Site S-Tag VLAN</inlineHelpText>
        <label>PPPoE VLAN</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PTMP_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PTMP Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Default_Gateway__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Default_Gateway__r.Name)), Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Default_Gateway__r.Name,
IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Default_Gateway__r.Name)), Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Default_Gateway__r.Name,
IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.Parent_Site__r.Default_Gateway__r.Name)), Parent_Site__r.Parent_Site__r.Parent_Site__r.Default_Gateway__r.Name,
IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.Default_Gateway__r.Name)), Parent_Site__r.Parent_Site__r.Default_Gateway__r.Name,
IF(NOT(ISBLANK(Parent_Site__r.Default_Gateway__r.Name)), Parent_Site__r.Default_Gateway__r.Name,
Default_Gateway__r.Name)))))</formula>
        <label>Default Gateway</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_PPPoE_VLAN__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.PPPoE_VLAN__c)), Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.PPPoE_VLAN__c,
IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.PPPoE_VLAN__c)), Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.PPPoE_VLAN__c,
IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.Parent_Site__r.PPPoE_VLAN__c)), Parent_Site__r.Parent_Site__r.Parent_Site__r.PPPoE_VLAN__c,
IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.PPPoE_VLAN__c)), Parent_Site__r.Parent_Site__r.PPPoE_VLAN__c,
IF(NOT(ISBLANK(Parent_Site__r.PPPoE_VLAN__c)), Parent_Site__r.PPPoE_VLAN__c,
PPPoE_VLAN__c)))))</formula>
        <inlineHelpText>The PPPoE Per Site S-Tag VLAN</inlineHelpText>
        <label>PPPoE VLAN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Site</label>
        <referenceTo>Management_Site__c</referenceTo>
        <relationshipLabel>Management Sites</relationshipLabel>
        <relationshipName>Child_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Subnet__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Subnet__c)), Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Subnet__c,
IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Subnet__c)), Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Subnet__c,
IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.Parent_Site__r.Subnet__c)), Parent_Site__r.Parent_Site__r.Parent_Site__r.Subnet__c,
IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.Subnet__c)), Parent_Site__r.Parent_Site__r.Subnet__c,
IF(NOT(ISBLANK(Parent_Site__r.Subnet__c)), Parent_Site__r.Subnet__c,
Subnet__c)))))</formula>
        <label>Subnet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_VLAN__c</fullName>
        <formula>IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.VLAN__c)), Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.VLAN__c,
IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.VLAN__c)), Parent_Site__r.Parent_Site__r.Parent_Site__r.Parent_Site__r.VLAN__c,
IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.Parent_Site__r.VLAN__c)), Parent_Site__r.Parent_Site__r.Parent_Site__r.VLAN__c,
IF(NOT(ISBLANK(Parent_Site__r.Parent_Site__r.VLAN__c)), Parent_Site__r.Parent_Site__r.VLAN__c,
IF(NOT(ISBLANK(Parent_Site__r.VLAN__c)), Parent_Site__r.VLAN__c,
VLAN__c)))))</formula>
        <label>VLAN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Public_Comment__c</fullName>
        <label>Public Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Range__c</fullName>
        <label>Range</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Subnet__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Subnet</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unlimited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unlimited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VLAN__c</fullName>
        <label>VLAN</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Management Site</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Domain__c</columns>
        <columns>Parent_Subnet__c</columns>
        <columns>Parent_VLAN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Master_Sites</fullName>
        <columns>NAME</columns>
        <columns>Domain__c</columns>
        <columns>Parent_Subnet__c</columns>
        <columns>Parent_VLAN__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Parent_Site__c</field>
            <operation>equals</operation>
        </filters>
        <label>Master Sites</label>
    </listViews>
    <nameField>
        <label>Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Management Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>